# gtest-VisualStudio-CMake-example

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  add.cpp  add.h  main.cpp
unit-test/: CMakeLists.txt  unit-test.cpp
